feat(client) detect library: LUA OpenResty NGINX feat(client) detect pim: Windows Mail feat(bots) detect bot: Discord Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4432,3 +4432,9 @@
     name: DataForSeoBot
     category: Crawler
     url: https://dataforseo.com/dataforseo-bot
+-
+  user_agent: Mozilla/5.0 (compatible; Discordbot/2.0; +https://discordapp.com)
+  bot:
+    name: Discord Bot
+    category: Service Agent
+    url: https://discordapp.com
