--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2596,6 +2596,11 @@
   category: 'Crawler'
   url: 'https://dataforseo.com/dataforseo-bot'
 
+- regex: 'Discordbot/([\d+.]+)'
+  name: 'Discord Bot'
+  category: 'Service Agent'
+  url: 'https://discordapp.com'
+
 # Generic detections
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
   name: 'Generic Bot'
