feat(device) detect brand Ginzzu model: GT-X890 feat(device) detect brand ZTE model: Blade GF3 (T320) feat(device) detect brand TCL models: 10L (T770B), 20L (T774H) feat(device) detect brand HTC models: One Max (HTC0P3P7), Desire 530 (HTCD160LVWPP) feat(device) detect brand Samsung models: Galaxy Tab 3 Lite 7.0" (SM-T111NQ), Galaxy Tab A 8.0" (2019) LTE (SM-T297),  Galaxy S4 (SHV-E300K), Galaxy S4 LTE (SHV-E330S), Galaxy A11 (SM-S115DL), Galaxy M52 5G (SM-M526B), Galaxy M22(SM-M225FV),  Galaxy S21 5G (SM-G991Q)
feat(device) added tests for brand Samsung models: Galaxy S20 Ultra 5G ()
feat(device) added tests for brand Huawei models: Ascend Mate 7 (MT7-TL10), Galaxy Note 4 (SM-N910V), Galaxy J7 (SM-J700H)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -181,7 +181,7 @@ HTC:
       model: 'Desire 626S'
     - regex: '0PCV1(?:[);/ ]|$)'
       model: 'Desire 510'
-    - regex: 'HTC ?D160LVW(?:[);/ ]|$)'
+    - regex: 'HTC ?D160LVW(?:PP)?(?:[);/ ]|$)'
       model: 'Desire 530'
     - regex: 'HTC[_ ]D310n(?:[);/ ]|$)'
       model: 'Desire 310'
@@ -223,7 +223,7 @@ HTC:
     - regex: 'HTC[ _-]Flyer[ _\-]([\w]{1,5})'
       device: 'tablet'
       model: 'Flyer $1'
-    - regex: 'HTC(?:[ _-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
+    - regex: 'HTC(?:[ _-])?(?:One[ _\-]max|6600LVW|0P3P7)(?:[);/ ]|$)'
       device: 'phablet'
       model: 'One Max'
     - regex: 'HTC[ _]([^/;]+) [0-9]+(?:\.[0-9]+)+ Build'
@@ -6809,7 +6809,7 @@ Ginzzu:
   models:
     - regex: 'GINZZU[_ ]?(S40[17]0|S4710|ST60[14]0|ST6120)'
       model: '$1'
-    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78]70|7810|8[01]10|X853))'
+    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78]70|7810|8[01]10|X853|X890))'
       model: '$1'
       device: 'tablet'
     - regex: '(RS6[12]D) ULTIMATE'
@@ -14039,11 +14039,13 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
       model: 'Gala G60'
+    - regex: 'T774H(?:[);/ ]|$)'
+      model: '20L'
     - regex: 'T775H(?:[);/ ]|$)'
       model: '20L Plus'
     - regex: '6125[FD](?:[);/ ]|$)'
@@ -14078,7 +14080,7 @@ TCL:
       model: 'LX'
     - regex: 'A507DL(?:[);/ ]|$)' # TracFone A507DL
       model: 'A2'
-    - regex: 'T770H(?:[);/ ]|$)'
+    - regex: 'T770[HB](?:[);/ ]|$)'
       model: '10L'
     - regex: 'T766[AHJU](?:_(?:EEA|RU))?(?:[);/ ]|$)'
       model: '10 SE'
@@ -14569,6 +14571,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T307U(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 8.4" (2020) LTE'
+    - regex: '(?:SAMSUNG-)?SM-T297'
+      device: 'tablet'
+      model: 'Galaxy Tab A 8.0" (2019) LTE'
     - regex: '(?:SAMSUNG-)?SM-(?:T505[CN]?|T507)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A7 10.4" (2020) LTE'
@@ -14617,7 +14622,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T866N(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" 5G'
-    - regex: '(?:SAMSUNG-)?SM-T111[M]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-T111'
       device: 'tablet'
       model: 'Galaxy Tab 3 Lite 7.0"'
     - regex: '(?:SAMSUNG-)?SM-T116(?:BU|NU|NY)?'
@@ -14985,10 +14990,12 @@ Samsung:
       model: 'Galaxy S III'
     - regex: '(?:SAMSUNG-)?(?:GT-I9305|SCH-R530)'
       model: 'Galaxy S III LTE'
-    - regex: '(?:SAMSUNG-)?(?:SM-S975L|GT-I950[025]|SC-04E|SCH-(?:I545|I959|R970)|SGH-M919N?|Galaxy-S4)'
+    - regex: '(?:SAMSUNG-)?(?:SM-S975L|GT-I950[025]|SC-04E|SCH-(?:I545|I959|R970)|SGH-M919N?|Galaxy-S4|SHV-E300K)'
       model: 'Galaxy S4'
-    - regex: '(?:SAMSUNG-)?GT-I9506'
+    - regex: '(?:SAMSUNG-)?(?:GT-I9506)'
       model: 'Galaxy S4 with LTE+'
+    - regex: '(?:SAMSUNG-)?SHV-E330'
+      model: 'Galaxy S4 LTE'
     - regex: '(?:SAMSUNG-)?GT-S5280'
       model: 'Galaxy STAR'
     - regex: '(?:SAMSUNG-)?GT-S5301'
@@ -15157,7 +15164,7 @@ Samsung:
       model: 'Galaxy S20+'
     - regex: '(?:SAMSUNG-)?SM-G986(?:U1|[0BNUW])|SC-52A'
       model: 'Galaxy S20+ 5G'
-    - regex: '(?:SAMSUNG-)?SM-G991(?:U1|[0BNW])|SCG09'
+    - regex: '(?:SAMSUNG-)?SM-G991(?:U1|[0BNWQ])|SCG09'
       model: 'Galaxy S21 5G'
     - regex: '(?:SAMSUNG-)?SC-51B'
       model: 'Galaxy S21 5G Olympic Games Edition'
@@ -15195,6 +15202,8 @@ Samsung:
       model: 'Galaxy A02'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
+    - regex: '(?:SAMSUNG-)?SM-S115(?:DL)?'
+      model: 'Galaxy A11'
     - regex: '(?:SAMSUNG-)?SM-A225[F]?'
       model: 'Galaxy A22'
     - regex: '(?:SAMSUNG-)?SM-A226'
@@ -15465,6 +15474,8 @@ Samsung:
       model: 'Galaxy M21'
     - regex: '(?:SAMSUNG-)?SM-M215G'
       model: 'Galaxy M21 (2021)'
+    - regex: '(?:SAMSUNG-)?SM-M225'
+      model: 'Galaxy M22'
     - regex: '(?:SAMSUNG-)?SM-(?:M307(?:FN|[0F])|M30s)'
       model: 'Galaxy M30s'
     - regex: '(?:SAMSUNG-)?SM-M305?'
@@ -15481,6 +15492,8 @@ Samsung:
       model: 'Galaxy M42 5G'
     - regex: '(?:SAMSUNG-)?SM-M515F'
       model: 'Galaxy M51'
+    - regex: '(?:SAMSUNG-)?SM-M526'
+      model: 'Galaxy M52 5G'
     - regex: '(?:SAMSUNG-)?SM-M625'
       model: 'Galaxy M62'
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
@@ -20386,6 +20399,8 @@ ZTE:
       model: 'Blade Q+'
     - regex: 'Blade Q Lux(?:[);/ ]|$)'
       model: 'Blade Q Lux'
+    - regex: 'ZTE T320(?:[);/ ]|$)'
+      model: 'Blade GF3'
     - regex: 'N9515(?:[);/ ]|$)'
       model: 'Warp Sync'
     - regex: 'N9519(?:[);/ ]|$)'
