feat(device) detect brand Telefunken model: TEL-73GIQA feat(device) detect brand Haier model: 2K Android TV feat(device) detect brand DIXON model: Solis (HK7-3502) feat(device) detect brand Soyes model: S10-H feat(device) detect brand ZTE model: Blade L9 feat(device) detect brand OPPO model: A54s (CPH2273)
feat(device) added tests for brand Samsung models: Galaxy Z Fold 3 5G (SM-F926N), Galaxy A02 (SM-A022F), Galaxy A02s (SM-A025A)
feat(device) added tests for brand Apple model: iPhone X (iPhone10,6)
feat(app) detect app BBC News

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1616,3 +1616,19 @@
     model: iPad 4
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: BBCNewsUKWatchApp/4.3.0 (Watch1,2; watchOS 3.2.2)
+  os:
+    name: watchOS
+    version: 3.2.2
+    platform: ARM
+  client:
+    type: mobile app
+    name: BBC News
+    version: 4.3.0
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch 42mm
+  os_family: iOS
+  browser_family: Unknown
