--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -967,3 +967,8 @@
 - regex: 'Theyub v(\d+[\.\d]+)'
   name: 'Theyub'
   version: '$1'
+
+# BBC News
+- regex: 'BBCNewsUKWatchApp/(\d+[\.\d]+)'
+  name: 'BBC News'
+  version: '$1'
