--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -7434,3 +7434,35 @@
     model: Galaxy Note 4
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; SM-F926N Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/94.0.4606.85 Safari/537.36;KAKAOTALK 2309520
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: mobile app
+    name: KakaoTalk
+    version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Z Fold 3 5G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/18C66 [FBAN/FBIOS;FBDV/iPhone10,6;FBMD/iPhone;FBSN/iOS;FBSV/14.3;FBSS/3;FBID/phone;FBLC/ru_RU;FBOP/5]'
+  os:
+    name: iOS
+    version: "14.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone X
+  os_family: iOS
+  browser_family: Unknown
