--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -5072,3 +5072,21 @@
     model: Galaxy Tab A 8.0" (2019) LTE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; TEL-73GIQA Build/OPM2.171019.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/91.0.4472.120 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Telefunken
+    model: TEL-73GIQA
+  os_family: Android
+  browser_family: Chrome
