--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2709,3 +2709,21 @@
     model: ATV1960
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; haierATVnippori Build/PTO3.200227.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/95.0.4638.74 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 95.0.4638.74
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Haier
+    model: 2K Android TV
+  os_family: Android
+  browser_family: Chrome
