--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7288,6 +7288,8 @@ Hisense:
       model: 'U601S Pro'
     - regex: 'Infinity H50 ZOOM(?:[);/ ]|$)'
       model: 'Infinity H50 Zoom'
+    - regex: 'Infinity E30SE(?:[);/ ]|$)'
+      model: 'Infinity E30 SE'
     - regex: '(HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*)'
       model: '$1'
 
@@ -16427,7 +16429,7 @@ Prestigio:
     - regex: 'PSP7510DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C7 LTE'
-    - regex: 'Muze C3(?:[);/ ]|$)'
+    - regex: '(?:Muze C3|PSP3504DUO)(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
     - regex: 'PSP3512DUO(?:[);/ ]|$)'
@@ -17451,7 +17453,7 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6[nmjk](?:[);/ ]|$)'
+    - regex: 'TECNO[ _]KF6[nmjk]?(?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
