--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5132,7 +5132,7 @@ Desay:
 
 # DEXP (dexp.club)
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E210|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|355)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N180i|N380i|(?<!VOX )G450)(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E210|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|355)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N180i|N380i|(?<!VOX )G450|Q210)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -5163,7 +5163,7 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N180i|N380i|E1[78]0)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N180i|N380i|E1[78]0|Q210)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
@@ -7225,7 +7225,7 @@ Hisense:
       model: 'A6'
     - regex: 'HLTE730T'
       model: 'A6L'
-    - regex: 'HLTE221E'
+    - regex: 'HLTE221E|E MAX(?:[);/ ]|$)'
       model: 'E Max'
     - regex: 'HLTE501N'
       model: 'V Plus'
@@ -8277,7 +8277,7 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:0[04]|42|5[01]|84|65|7[01345-89]|8[356]|9[12578])|200|49|55|72|22|7(?:0[127]|1[1-4679]|2[021567]|3[025-8]|4[257]|5[23457]|6[12]|72|7[17]|8[1]|9[147])|8(?:[34]1|5[3-8]|6[2-5]|7[12478]|8[1-5]|9[0127])|96[0-9])|TZ85|TZ13|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))(?:[);/ ]|$)'
+  regex: 'IRBIS|TZ(1(?:0[04]|42|5[01]|84|65|7[01345-89]|8[356]|9[12578])|200|49|55|72|22|7(?:0[127]|1[1-4679]|2[021567]|3[025-8]|4[257]|5[23457]|6[12]|72|7[137]|8[1]|9[147])|8(?:[34]1|5[3-8]|6[2-5]|7[12478]|8[1-5]|9[0127])|96[0-9])|TZ85|TZ13|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))(?:[);/ ]|$)'
@@ -12358,6 +12358,8 @@ MyPhone:
       model: 'Cube LTE'
     - regex: 'Prime_4_Lite'
       model: 'Prime 4 Lite'
+    - regex: 'HAMMER[ _]ENERGY[ _](\d+)'
+      model: 'Hammer Energy $1'
     - regex: 'HAMMER[ _]ENERGY'
       model: 'Hammer Energy'
     - regex: 'HAMMER_AXE[_ ]M[_ ]LTE'
@@ -14341,7 +14343,7 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|B1))(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -16518,7 +16520,7 @@ Sanyo:
 
 # Qilive
 Qilive:
-  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|8T10IN|8S55IN4G2|8S[56]IN4G|9T9IN|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
+  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|T19101HV|8T10IN|8S55IN4G2|8S[56]IN4G|9T9IN|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
   device: 'smartphone'
   models:
     - regex: 'Q7S5IN4G'
@@ -16560,6 +16562,9 @@ Qilive:
       device: 'tablet'
     - regex: 'Q9T10IN4G'
       model: 'Q9 10.1" 4G'
+      device: 'tablet'
+    - regex: '(QT19101HV)'
+      model: '$1'
       device: 'tablet'
     - regex: 'Qilive ([0-5][^;/]*) Build'
       model: '$1'
@@ -21088,10 +21093,10 @@ Shuttle:
 
 # BDF
 BDF:
-  regex: '(BDF[- ](?:819|P10|K107H|KT107|MT6753|X20)|K960N_MT(?:6580|6753)(?:_32_N)?)(?:[);/ ]|$)'
+  regex: '(?:BDF[- ](?:819|P10|M107|K107H|KT107|MT6753|X20)|K960N_MT(?:6580|6753)(?:_32_N)?)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'BDF[- ](819|P10|K107H|KT107|MT6753|X20)(?:[);/ ]|$)'
+    - regex: 'BDF[- ](819|P10|M107|K107H|KT107|MT6753|X20)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'K960N_MT(6580|6753)(_32_N)?(?:[);/ ]|$)'
       model: 'BK960N MT$1'
@@ -21770,7 +21775,7 @@ Wigor:
 
 # NEXON (nexon.ua)
 NEXON:
-  regex: 'NEXON (X[12589])(?:[);/ ]|$)'
+  regex: 'NEXON (X3\+|X[12589])(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
@@ -22299,7 +22304,7 @@ Tone:
 
 # AT&T
 AT&T:
-  regex: '(?:U304AA|QS5509A|U705AA|U318AA|V350U)(?:[);/ ]|$)'
+  regex: '(?:U(?:304|202|705|318)AA|QS5509A|V350U)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'U304AA(?:[);/ ]|$)'
@@ -22312,6 +22317,8 @@ AT&T:
       model: 'Calypso'
     - regex: 'V350U(?:[);/ ]|$)'
       model: 'Maestro Plus'
+    - regex: 'U202AA(?:[);/ ]|$)'
+      model: 'Maestro'
 
 # BIHEE
 BIHEE:
@@ -25696,6 +25703,12 @@ Glofiish:
 # Polar (polar.ru)
 Polar:
   regex: 'Polar[_ ](P24L51T2CSM)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
+# Polarline (sub brand Polar)
+PolarLine:
+  regex: 'PolarLine[_ ](32PL13TC-SM)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
