--- a/Tests/fixtures/smartphone-13.yml
+++ b/Tests/fixtures/smartphone-13.yml
@@ -7781,7 +7781,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: SHV-E330L
+    model: Galaxy S4 LTE
   os_family: Android
   browser_family: Chrome
 - 
