feat(device) detect brand Lenovo models: Tab P11 Pro (TB-J706F), K13 feat(device) detect brand Gigaset model: GX290 feat(device) detect brand LG models: X2 (2019) (LM-X220N), K31 (LGL355DL), V60 ThinQ 5G (LM-V600V) feat(device) detect brand Senwa model: Inizio LTE (LS5018F) feat(device) detect brand Huawei model: Mate 30E Pro 5G (LIO-AN00m) feat(device) detect brand Lanix model: Ilium Alpha 1T

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6779,7 +6779,7 @@ Gigabyte:
 
 # Gigaset
 Gigaset:
-  regex: 'Gigaset|(?: GS80|GS1[0189]0|GS1[89]5|GS2[89]0|GS5[357]-6|GS[23]70(?:_Plus)?)(?:[);/ ]|$)'
+  regex: 'Gigaset|(?: GX290|GS80|GS1[0189]0|GS1[89]5|GS2[89]0|GS5[357]-6|GS[23]70(?:_Plus)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Gigaset QV(1030|830)'
@@ -6790,6 +6790,8 @@ Gigaset:
       model: 'G$1 Plus'
     - regex: 'GS([23]70|1[0189]0|1[89]5|2[89]0|80)(?:[);/ ]|$)'
       model: 'GS$1'
+    - regex: '(GX290)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'GS57-6'
       model: 'ME Pro'
     - regex: 'GS55-6'
@@ -7711,6 +7713,8 @@ Huawei:
       model: 'Mate 30 Pro'
     - regex: 'LIO-N29(?:[);/ ]|$)'
       model: 'Mate 30 Pro 5G'
+    - regex: 'LIO-AN00m(?:[);/ ]|$)'
+      model: 'Mate 30E Pro 5G'
     - regex: 'NOH-(?:NX9|AN0[01])(?:[);/ ]|$)'
       model: 'Mate 40 Pro'
     - regex: 'NOP-AN00(?:[);/ ]|$)'
@@ -9813,7 +9817,7 @@ Lanix:
       device: 'tablet'
     - regex: 'X120C'
       model: 'Ilium X120C'
-    - regex: 'Ilium[ _](Alpha [15]s|Alpha [379]|L(?:200|6[12]0|9[0125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710)|M[579]s)(?:[);/ ]|$)'
+    - regex: 'Ilium[ _](Alpha [15]s|Alpha [379]|Alpha 1T|L(?:200|6[12]0|9[0125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710)|M[579]s)(?:[);/ ]|$)'
       model: 'Ilium $1'
     - regex: 'ILIUM[ _]([^;/]+) Build'
       model: 'Ilium $1'
@@ -10096,7 +10100,7 @@ Lenovo:
     - regex: 'TB-J606[LF](?:[);/ ]|$)'
       model: 'Tab P11'
       device: 'tablet'
-    - regex: 'TB-J706L(?:[);/ ]|$)'
+    - regex: 'TB-J706[LF](?:[);/ ]|$)'
       model: 'Tab P11 Pro'
       device: 'tablet'
     - regex: 'TB-7104[IF](?:[);/ ]|$)'
@@ -10693,6 +10697,8 @@ LG:
       model: 'Q60'
     - regex: 'LM-K315IM'
       model: 'W31'
+    - regex: 'LG-?L355DL'
+      model: 'K31'
     - regex: 'LGL423DL'
       model: 'Solo LTE'
     - regex: 'LM-X210K'
@@ -10771,6 +10777,8 @@ LG:
       model: 'Aristo 2'
     - regex: 'LM-X220(?:[);/ ]|$)'
       model: 'Aristo 3'
+    - regex: 'LM-X220N(?:[);/ ]|$)'
+      model: 'X2 (2019)'
     - regex: 'LM-V40(?:5|9N|5EBW)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
     - regex: 'LM-(?:V500N?|V450)(?:[);/ ]|$)'
@@ -10807,7 +10815,7 @@ LG:
       model: 'Velvet 5G'
     - regex: '(?:LM-G910)(?:[);/ ]|$)'
       model: 'Velvet 4G'
-    - regex: '(?:A001LG|LM-V600)(?:[);/ ]|$)'
+    - regex: '(?:A001LG|LM-V600V?)(?:[);/ ]|$)'
       model: 'V60 ThinQ 5G'
     - regex: '(?:LG-)?VS410PP'
       model: 'Optimus Zone'
@@ -15786,7 +15794,7 @@ Sencor:
 
 # Senwa (senwamobile.com)
 Senwa:
-  regex: 'Senwa|(?:S\-?(?:471|7[12]5|6[01]5|915|905TL|1000|5018)|V705B|LS50F| LS50?|LS5518H|LS5718)(?:[);/ ]|$)'
+  regex: 'Senwa|(?:S\-?(?:471|7[12]5|6[01]5|915|905TL|1000|5018)|V705B|LS50F| LS50?|LS5518H|LS5718|LS5018F)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'S-?471(?:[);/ ]|$)'
@@ -15799,6 +15807,8 @@ Senwa:
       model: 'Odin'
     - regex: 'S-?5018(?:[);/ ]|$)'
       model: 'Inizio'
+    - regex: 'LS5018F(?:[);/ ]|$)'
+      model: 'Inizio LTE'
     - regex: 'S-?(615|7[12]5|915)(?:[);/ ]|$)'
       model: 'S$1'
     - regex: 'V705B(?:[);/ ]|$)'
