New Facebook user agent
See https://developers.facebook.com/docs/sharing/webmasters/crawler

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -482,7 +482,7 @@
     name: 'SEOmoz, Inc.'
     url: 'http://moz.com/'
 
-- regex: 'facebookexternalhit|facebookplatform|facebookexternalua'
+- regex: 'facebookexternalhit|facebookplatform|facebookexternalua|facebookcatalog'
   name: 'Facebook External Hit'
   category: 'Social Media Agent'
   url: 'https://www.facebook.com/externalhit_uatext.php'
