Improves detection for Apple iPhone 11 and simplify regexes

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -10996,3 +10996,19 @@
     model: REVVL 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: ios.zepeto_global/3.6.2 (ios; U; iOS 14.7.1; en-CA; occ-CA; iPhone 11);ZEPETO
+  os:
+    name: iOS
+    version: 14.7.1
+    platform: ""
+  client:
+    type: mobile app
+    name: ZEPETO
+    version: 3.6.2
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 11
+  os_family: iOS
+  browser_family: Unknown
