--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -962,49 +962,49 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?10[C,_][36]|iPhone X| X\)$'
       model: 'iPhone X'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][2]| XS\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_]2| XS\)$'
       model: 'iPhone XS'
       device: 'smartphone'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][46]|iPhoneXSMax| XSMAX\)$'
       model: 'iPhone XS Max'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_][8]| XR\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?11[C,_]8| XR\)$'
       model: 'iPhone XR'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_][1]| 11\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_]1|iPhone 11| 11\)$'
       model: 'iPhone 11'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_][3]| 11PRO\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_]3| 11PRO\)$'
       model: 'iPhone 11 Pro'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_][5]| 11PROMAX\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_]5| 11PROMAX\)$'
       model: 'iPhone 11 Pro Max'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_][8]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?12[C,_]8'
       model: 'iPhone SE (2020)'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_][1]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_]1'
       model: 'iPhone 12 Mini'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_][2]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_]2'
       model: 'iPhone 12'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_][3]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_]3'
       model: 'iPhone 12 Pro'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_][4]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_]4'
       model: 'iPhone 12 Pro Max'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][2]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_]2'
       model: 'iPhone 13 Pro'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][3]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_]3'
       model: 'iPhone 13 Pro Max'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][4]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_]4'
       model: 'iPhone 13 Mini'
       device: 'smartphone'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][5]'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_]5'
       model: 'iPhone 13'
       device: 'phablet'
 
@@ -1012,7 +1012,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad1[C,_]1'
       model: 'iPad'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad2[C,_][1234]'
+    - regex: '(?:Apple-|.+_)?iPad2[C,_][1-4]'
       model: 'iPad 2'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad2[C,_][567]'
