Improves detection for iOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2815,3 +2815,11 @@
     version: 14.4.2
     platform: ""
     family: iOS
+-
+  user_agent: iPhone12,1_15.0.2_weibo_11.10.1_iPhone_wifi ijkplayer WBFPlayer
+  os:
+    name: iOS
+    short_name: IOS
+    version: 15.0.2
+    platform: ""
+    family: iOS
