--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22044,7 +22044,7 @@ Newland:
   device: 'smartphone'
   model: 'MT90 Orca'
 
-# Orbic
+# Orbic (orbic.us)
 Orbic:
   regex: 'RC(?:501|545|555)L(?:[);/ ]|$)'
   device: 'smartphone'
