--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7302,7 +7302,7 @@ Hisense:
       device: 'tv'
       model: '$1'
 
-    - regex: 'KS964(?: Build|[);])'
+    - regex: 'KS964(?:[);/ ]|$)'
       model: 'U3 (2019)'
     - regex: '(?:HS-)?Hisense (U3) 2021(?: Build|[);])'
       model: 'U3 (2021)'
