Adds detection for Dazen, FiiO, Ghost, Paladin, Wolki brands and improves detection for Apple, Blu, CellAllure, Hisense, Lanix, M-Tech, Orbic, Realme, T-Mobile, Verizon brands (#6912)
* Adds detection for Dazen brand and Dazen 6A
* Adds detection for Paladin brand and Paladin TV Box
* Adds detection for Blu M6 (2021)
* Adds detection for CellAllure Miracle XS
* Adds detection for FiiO brand and FiiO M15
* Adds detection for Lanix Ilium M7T
* Adds detection for M-Tech TEZ 4G
* Adds detection for Realme C25s
* Adds detection for Verizon Ellipsis 7
* Adds detection for Wolki brand and Wolki W6 Pro
* Adds detection for Hisense U3 (2019)
* Adds detection for Orbic Maui
* Adds detection for T-Mobile REVVL 5G
* Adds detection for Ghost brand and Ghost G03
* Improves detection for Apple iPhone 11 and simplify regexes
* Improves detection for iOS
* Add website

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2807,3 +2807,19 @@
     version: ""
     platform: x86
     family: Windows
+-
+  user_agent: Deezer/8.51.0.5 (iOS; 14.4.2; Mobile; en; iPhone10_4)
+  os:
+    name: iOS
+    short_name: IOS
+    version: 14.4.2
+    platform: ""
+    family: iOS
+-
+  user_agent: iPhone12,1_15.0.2_weibo_11.10.1_iPhone_wifi ijkplayer WBFPlayer
+  os:
+    name: iOS
+    short_name: IOS
+    version: 15.0.2
+    platform: ""
+    family: iOS
