--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -493,7 +493,7 @@
   name: 'iOS'
   version: '$1.$2'
 
-- regex: '^(?:iPad|iPhone)(?:\d+[\,\d]*)/(\d+[\.\d]+)'
+- regex: '^(?:iPad|iPhone)(?:\d+[\,\d]*)[/_](\d+[\.\d]+)'
   name: 'iOS'
   version: '$1'
 
@@ -501,7 +501,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'iOS/(\d+[\.\d]+)'
+- regex: 'iOS(?:/|; )(\d+[\.\d]+)'
   name: 'iOS'
   version: '$1'
 
