feat(device) detect brand LG models: AKA (LG-F520K), G3 Beat (LG-F470K) feat(device) detect brand Elephone model: A6 Mini feat(device) detect brand Vivo model: Y52 (V2053) feat(device) detect brand OPPO model: A11x (PCHT30) feat(device) detect brand Huawei model: Mate 40 Pro (NOH-AL10), Honor Play 9A (MOA-TL00),  Enjoy 10E (MED-AL20), Maimang 9 (TNN-AN00), MatePad Pro 10.8" WiFi (MRX-W19, MRX-W39),  MatePad Pro 10.8" (MRX-AL19), MatePad Pro 10.8" 5G (MRX-AN19), MatePad Pro 10.8" (2021) WiFi (MRR-W29)

--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -194,7 +194,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MatePad Pro
+    model: MatePad Pro 10.8"
   os_family: Android
   browser_family: Chrome
 - 
@@ -212,7 +212,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MatePad Pro
+    model: MatePad Pro 10.8" WiFi
   os_family: Android
   browser_family: Chrome
 - 
@@ -806,7 +806,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MediaPad M5 Pro
+    model: MediaPad M6 10.8"
   os_family: Android
   browser_family: Chrome
 - 
@@ -842,7 +842,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MediaPad M6 10
+    model: MediaPad M6 10.8" WiFi
   os_family: Android
   browser_family: Chrome
 - 
