--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -4889,7 +4889,7 @@
   device:
     type: tablet
     brand: Huawei
-    model: MatePad Pro
+    model: MatePad Pro 10.8" WiFi
   os_family: Android
   browser_family: Unknown
 -
@@ -5180,3 +5180,93 @@
     model: Serenity 1055 10.1"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MRX-W19; HMSCore 5.3.0.312) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.1.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.1.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MRX-W39; HMSCore 6.0.1.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.3.300 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.3.300
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRX-AL19; HMSCore 6.0.0.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.2.301 Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.2.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8"
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRX-AN19; HMSCore 6.1.0.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Mobile Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" 5G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; MRR-W29; HMSCore 6.0.1.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Safari/537.36
+  os:
+    name: HarmonyOS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad Pro 10.8" (2021) WiFi
+  os_family: Android
+  browser_family: Unknown
